deploy/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memuy-app
  namespace: memuy
spec:
  selector:
    matchLabels:
      app: memuy-app
  replicas: 1
  template:
    metadata:
      labels:
        app: memuy-app
    spec:
      imagePullSecrets:
        - name: ecr
      containers:
        - name: memuy-app
          image: registry.gitlab.com/dygufa/memuy_api:$CI_PIPELINE_ID
          readinessProbe:
            httpGet:
              path: /v2/
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 1
          ports:
            - containerPort: 8000
              name: http
          resources:
            limits:
              memory: 600Mi
              cpu: 500m
            requests:
              memory: 50Mi
              cpu: 5m
---
kind: Service
apiVersion: v1
metadata:
  name: memuy-app
  namespace: memuy
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: memuy-app
---
