deploy/mongo.yml

apiVersion: v1
kind: Service
metadata:
  namespace: memuy
  name: mongo
  labels:
    statefulset.kubernetes.io/pod-name: mongo-0
spec:
  ports:
   - port: 27017
  selector:
   app: mongo
---

apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  namespace: memuy
  name: mongo
spec:
  serviceName: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
      volumes:
        - name: mongo-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pv-claim
---
