deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: memuy-ingress
  namespace: memuy
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "99m"
---
spec:
  rules:
    - host: api.memuy.com
      http:
        paths:
          - backend:
              serviceName: memuy-app
              servicePort: 8000
---
